# atomic-installer

./: .gitignore  LICENSE  README.md  go.mod  go.sum  main.go  meson.build  meson_options.txt
.github/workflows/: alt-atomic-builder.yml
app/: gui.go
app/image/: storage.go
app/install/: process.go  status.go
app/steps/: common.go  step_1_language.go  step_2_image.go  step_3_disk.go  step_4_filesystem.go  step_5_boot.go  step_6_user.go  step_7_result.go  step_8_process.go  step_boot.go  step_check.go  step_disk.go  step_filesystem.go  step_image.go  step_language.go  step_process.go  step_result.go  step_user.go
app/utility/: internet.go  language.go  timezone.go  user.go
data/: config.yml
lib/: env.go  i18n.go  logger.go
po/: POTFILES  installer.pot  update_po.sh  update_pot.sh  update_potfiles.sh
